--- a/shweb/templates/index.html
+++ b/shweb/templates/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <img src="/static/images/bandlogo.png" alt="" class="bandlogo">
+    <h1> Pipeline check </h1>
     <ul class="social-links">
         <li class="social">
             <a target="_blank" href="https://vk.com/stanethuzhe">
