--- a/shweb/static/css/mobile.css
+++ b/shweb/static/css/mobile.css
@@ -1,4 +1,4 @@
-.bandlogo {
+/* .bandlogo {
     padding-top: 20vh;
     width: 90%;
 }
@@ -15,4 +15,4 @@
 .social {
     height: 5vh;
     width: 20%;
-}
+} */
