--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -1,59 +1,147 @@
+@font-face {
+  font-family:"alcotton";
+  src: url("/static/css/alcotton.ttf") format("truetype");
+}
+
+* {
+  font-size: 20px;
+  font-family: alcotton;
+}
+
+html {
+  height: 100%;
+}
+
 body {
-    background-image:    url(../images/background.png);
-    background-color: rgba(0, 0, 0, 0.97);
-    background-size:     cover;
-    background-repeat:   no-repeat;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    background-position: center center;
-    overflow: hidden;
+  margin: 0;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  background-image:    url(../images/background.png);
+  background-color: rgba(0, 0, 0, 0.97);
+  background-size:     cover;
+  background-repeat:   no-repeat;
+  background-position: center center;
+  overflow: hidden;
 }
 
-li {
-    list-style-type: none;
+/* HEADER */
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  font-family: Arial;
 }
 
-@media (hover: hover) {
-    .social img:hover {
-        transform: scale(1.1);
-        filter: none;
-    }
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: rgba(0,0,0,0.8);
 }
 
-.bandlogo {
-    display: block;
-    padding-left: 5%;
-    padding-top: 10vh;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
+.navbar a {
+  float: left;
+  color: white;
+  text-align: center;
+  /* padding: 14px; */
+  text-decoration: none;
+}
+
+.navbar button {
+  /* float: left; */
+
+  color: white;
+  background-color: rgba(0,0,0,0);
+  border: none;
+  text-align: center;
+  /* padding: 14px; */
+  text-decoration: none;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0,0,0,0.8);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: white;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* FOOTER */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  background:rgba(0, 0, 0, 0.4);
 }
 
 .filter-pink {
-    filter: invert(73%) sepia(30%) saturate(340%) hue-rotate(314deg) brightness(300%) contrast(50%);
+  filter: invert(73%) sepia(30%) saturate(340%) hue-rotate(314deg) brightness(300%) contrast(50%);
+}
+
+li {
+  list-style-type: none;
 }
 
 .social-links {
-    width: 70%;
-    padding: 5vh 0;
-    display: flex;
-    justify-content: center;
-    text-align: center;
+  width: 600px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
+
 .social {
-    margin-top: 1vh;
-    margin-left: 1%;
-    margin-right: 1%;
-    margin-bottom: 1vh;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media (hover: hover) {
+  .social img:hover {
+      transform: scale(1.1);
+      filter: none;
+  }
 }
 
 .social img {
-    height: 7vh;
-    max-height: 100%;
-    max-width: 100%;
-    transition: all 0.3s ease;
+  height: 40px;
+  max-height: 100%;
+  max-width: 100%;
+  transition: all 0.3s ease;
+}
+
+/* header */
+
+.header {
+  display: flex;
+  justify-content: center;
+
+}
+
+.header img {
+  height: 120px;
+  max-height: 100%;
+  max-width: 100%;
+  transition: all 0.3s ease;
 }
