--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -6,6 +6,7 @@
 * {
   font-size: 20px;
   font-family: alcotton;
+  letter-spacing: -5px;
 }
 
 html {
@@ -22,7 +23,6 @@ body {
   background-size:     cover;
   background-repeat:   no-repeat;
   background-position: center center;
-  overflow: hidden;
 }
 
 /* HEADER */
@@ -33,7 +33,7 @@ body {
   /* align-items: center; */
 }
 
-.header img {
+.bandlogo {
   padding-left: 70px;
   height: 120px;
   max-height: 100%;
@@ -41,10 +41,10 @@ body {
   transition: all 0.3s ease;
 }
 
+
 .navbar {
   display: flex;
   height: fit-content;
-  gap: 30px;
   justify-content: center;
   overflow: hidden;
   font-family: Arial;
@@ -52,14 +52,16 @@ body {
 }
 
 .navbar * {
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: rgba(0,0,0,0.8);
 }
 
-.navbar a {
+.nav-link {
+  padding-left: 20px;
+  padding-right: 20px;
   float: left;
   color: white;
   text-align: center;
@@ -67,6 +69,8 @@ body {
 }
 
 .navbar button {
+  width: 320px;
+  pointer-events: none;
   color: white;
   background-color: rgba(0,0,0,0);
   border: none;
@@ -74,31 +78,36 @@ body {
   text-decoration: none;
 }
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
+  width: fit-content;
   display: none;
   position: absolute;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.3);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 298px;
+  border: 1px solid black;
+  font-size: 25px;
   float: none;
   color: white;
+  overflow-wrap: break-word;
   text-decoration: none;
   display: block;
   text-align: left;
+  right: 4px;
+  left: auto;
 }
 
-/* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: rgba(255,255,255,0.3);
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
