--- a/shweb/templates/index.html
+++ b/shweb/templates/index.html
@@ -4,5 +4,5 @@
 <link rel='stylesheet' media='screen and (min-width: 1000px)' href="/static/css/home/default.css">
 {% endblock %}
 {% block content %}
-<img src="/static/images/releases/unsleep.jpg" alt="" class="main-page-photo">
+<img src="/static/images/collage.png" width="1800" height="500" class="main-page-photo">
 {% endblock %}
