--- a/shweb/static/css/home/default.css
+++ b/shweb/static/css/home/default.css
@@ -1,10 +1,12 @@
 .content {
     display: flex;
-    justify-content: center;
-    padding-top: 20px;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
     width: 100%;
 }
 
 .main-page-photo {
-    width: 30%;
+    width: 100%;
+    height: auto;
 }
