--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -42,16 +42,18 @@ body {
 
 
 .navbar {
+  padding-top: 20px;
+  padding-right: 20px;
   display: flex;
   height: fit-content;
   justify-content: center;
+  align-items: center;
   overflow: hidden;
   font-family: Arial;
-  padding-right: 50px;
 }
 
 .navbar * {
-  font-size: 30px;
+  font-size: 32px;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
@@ -59,6 +61,7 @@ body {
 }
 
 .nav-link {
+  font-weight: 600;
   padding-left: 20px;
   padding-right: 20px;
   float: left;
@@ -69,6 +72,7 @@ body {
 
 .navbar button {
   width: 320px;
+  font-weight: 600;
   pointer-events: none;
   color: white;
   background-color: rgba(0,0,0,0);
