--- a/shweb/templates/index.html
+++ b/shweb/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
 {{ super() }}
-<link rel='stylesheet' media='screen and (min-width: 1000px)' href="/static/css/home/default.css">
+<link rel='stylesheet' media='screen and (min-width: 1000px)' href="/static/css/home.css">
 {% endblock %}
 {% block content %}
 <img src="/static/images/collage.png" width="1800" height="500" class="main-page-photo">
