--- a/shweb/static/css/release.css
+++ b/shweb/static/css/release.css
@@ -27,8 +27,7 @@ pre {
 }
 
 .release-cover {
-    width: 40%;
-    height: auto;
+    border: 0; width: 350px; height: 442px;
 }
 
 .release-info {
