--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -4,7 +4,11 @@
 <link rel='stylesheet' media='screen and (min-width: 1000px)' href="/static/css/release.css">
 {% endblock %}
 {% block content %}
-<img src={{release_data['cover']}} class="release-cover">
+<iframe style="border: 0; width: 40%; height: 442px;"
+    src="https://bandcamp.com/EmbeddedPlayer/track={{release_data['bandcamp-id']}}/size=large/bgcol=333333/linkcol=e8c8c8/tracklist=true/transparent=true/"
+    seamless><a href={{ release_data['bandcamp-link'] }} class="release-cover"> {{release_data['release-name']}} by
+        станет хуже</a>
+</iframe>
 <div class="release-info">
     <div class="release-name"> {{release_data['release-name']}} </div>
     <div class="date">Release date: {{release_data['date']}} </div>
