bandcamp-id fix

--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <iframe style="border: 0; width: 40%; height: 442px;"
-    src="https://bandcamp.com/EmbeddedPlayer/track={{release_data['bandcamp-id']}}/size=large/bgcol=333333/linkcol=e8c8c8/tracklist=true/transparent=true/"
+    src="https://bandcamp.com/EmbeddedPlayer/{{release_data['bandcamp-id']}}/size=large/bgcol=333333/linkcol=e8c8c8/tracklist=true/transparent=true/"
     seamless><a href={{ release_data['bandcamp-link'] }} class="release-cover"> {{release_data['release-name']}} by
         станет хуже</a>
 </iframe>
