ham created, but menu is not

--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
 {{ super() }}
-<link rel='stylesheet' media='screen and (min-width: 1000px)' href="/static/css/release.css">
+<link rel='stylesheet' href="/static/css/release.css">
 {% endblock %}
 {% block content %}
 <div class="media-side">
