--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -4,53 +4,87 @@ body {
     background-size:     cover;
     background-repeat:   no-repeat;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
     background-position: center center;
     overflow: hidden;
 }
 
-li {
-    list-style-type: none;
-}
 
-.bandlogo {
-    display: block;
-    padding-left: 5%;
-    padding-top: 20vh;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
+* {
+    font-family: "Comfortaa";
+    color: #e8c8c8;
 }
 
 .filter-pink {
     filter: invert(73%) sepia(30%) saturate(340%) hue-rotate(314deg) brightness(300%) contrast(50%);
-}
+  }
 
-.social-links {
-    padding: 5vh 0;
-    text-align: center;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 20vh;
-}
+    .ham {
+        position: fixed;
+        z-index: 100;
+        top: 2vh;
+        right: 3%;
+        width: 15%;
+        border: transparent;
+        background-color: Transparent;
+        cursor: pointer;
+    }
 
-.social {
-    margin-top: 3vh;
-    margin-left: 1%;
-    margin-right: 1%;
-    margin-bottom: 3vh;
-    height: 5vh;
-    width: 20%;
-}
+    .menuIcon {
+        width: 100%;
+    }
 
-.social img {
-    height: 7vh;
-    max-height: 100%;
-    max-width: 100%;
-    transition: all 0.3s ease;
-}
+    .xIcon {
+        width: 100%;
+        display: none;
+    }
+
+        .menu {
+            font-size: 40px;
+            margin: 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100vh;
+            background: black;
+            color: white;
+            transform: translateY(-100%);
+            transition: transform 0.2s;
+            list-style: none;
+            padding-top: 4rem;
+            display: flex;
+            flex-direction: column;
+        }
+
+
+        .showMenu {
+            transform: translateY(0);
+        }
+
+            .show {display: block;}
+
+            .nav-link {
+                padding-left: 32px;
+                padding-right: 20px;
+                float: left;
+                text-align: center;
+                text-decoration: none;
+            }
+
+            .dropdown-content {
+                display: none;
+            }
+
+            .dropbtn {
+                text-decoration: none;
+                font-size: 32px;
+                display: block;
+                border: none;
+                background: none;
+                width:100%;
+                text-align: left;
+                cursor: pointer;
+                outline: none;
+            }
