--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -22,8 +22,8 @@
                 <div class="dropdown">
                     <button class="dropbtn">discogs</button>
                     <div class="dropdown-content">
-                        <a href="/releases/unsleep">Single "Бессонница"</a>
-                        <a href="/releases/traces">Single "Тропы"</a>
+                        <a href="/releases/unsleep">single "бессонница"</a>
+                        <a href="/releases/traces">single "тропы"</a>
                     </div>
                 </div>
             </div>
