--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -1,11 +1,16 @@
+@font-face {
+    font-family:"Comfortaa";
+    src: url("/static/css/fonts/Comfortaa-VariableFont_wght.ttf") format("truetype");
+}
+
 body {
+    margin: 0;
     background-image:    url(../../images/background.png);
     background-color: rgba(0, 0, 0, 0.97);
     background-size:     cover;
     background-repeat:   no-repeat;
-    min-height: 100vh;
+    height: 100vh;
     background-position: center center;
-    overflow: hidden;
 }
 
 
@@ -18,10 +23,18 @@ body {
     filter: invert(73%) sepia(30%) saturate(340%) hue-rotate(314deg) brightness(300%) contrast(50%);
   }
 
+.bandlogo {
+    display: block;
+    padding-top: 5vh;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
     .ham {
         position: fixed;
         z-index: 100;
-        top: 2vh;
+        top: 3vh;
         right: 3%;
         width: 15%;
         border: transparent;
@@ -39,8 +52,8 @@ body {
     }
 
         .menu {
-            font-size: 40px;
             margin: 0;
+            padding: 0;
             position: fixed;
             top: 0;
             left: 0;
@@ -56,30 +69,46 @@ body {
             padding-top: 4rem;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
         }
 
 
         .showMenu {
             transform: translateY(0);
+            transition: all 0.7s ease;
         }
 
-            .show {display: block;}
+            .dropdown-content {
+                width: 80%;
+                /* display: none; */
+            }
 
             .nav-link {
-                padding-left: 32px;
-                padding-right: 20px;
-                float: left;
+                padding-left: 10%;
+                font-size: 8vh;
                 text-align: center;
                 text-decoration: none;
             }
 
-            .dropdown-content {
-                display: none;
+            .links-container {
+                display: flex;
+                flex-direction: column;
             }
 
-            .dropbtn {
+            .links-container a {
+                padding-left: 25%;
+                font-size: 5vh;
                 text-decoration: none;
-                font-size: 32px;
+                padding-top: 1vh;
+                padding-bottom: 1vh;
+            }
+
+
+            .nav-div {
+                padding: 0;
+                padding-left: 10%;
+                font-size: 8vh;
+                text-decoration: none;
                 display: block;
                 border: none;
                 background: none;
@@ -87,4 +116,42 @@ body {
                 text-align: left;
                 cursor: pointer;
                 outline: none;
+            }
+
+            .social-links {
+                padding: 0;
+                text-align: center;
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                padding-bottom: 20vh;
+            }
+
+            .social-links li {
+                list-style-type: none;
+            }
+
+            .social {
+                margin-top: 3vh;
+                margin-left: 1%;
+                margin-right: 1%;
+                margin-bottom: 3vh;
+                height: 5vh;
+                width: 20%;
+            }
+
+            .social img {
+                height: 7vh;
+                max-height: 100%;
+                max-width: 100%;
+                transition: all 0.3s ease;
+            }
+
+            .active-color {
+                color: white;
+            }
+
+            .show {
+                display: block;
             }
