--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -4,32 +4,86 @@
 <head>
     {% block head %}
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/static/images/bandlogo.png">
     <link rel='stylesheet' href="/static/css/mobile/style.css">
     {% endblock %}
-    {% block scripts %}
-    <script>
-        function openElement(id) {
-            document.getElementById(id).classList.toggle("show");
-        }
-    </script>
-    {% endblock %}
+    {% block scripts %}{% endblock %}
 </head>
 
-<body {{ bodyproperty }}>
-    <button class="ham filter-pink">
-        <img class="menuIcon" src="/static/images/icons/menu.png">
-        <img class="xIcon" src="/static/images/icons/close.png">
-    </button>
-    <ul class="menu">
-        <li><a class="nav-link" href="/">home</a></li>
-        <div class="menuLink">
-            <button class="dropbtn" onclick="openElement('release-links')">discogs</button>
-            <div class="dropdown-content" id="release-links">
-                <a href="/releases/unsleep">Single "Бессонница"</a>
-                <a href="/releases/traces">Single "Тропы"</a>
-            </div>
+<body>
+    <div class="wrapper">
+        <div id="header" class="header">
+            {% block header %}
+            <img src="/static/images/bandlogo.png" alt="" class="bandlogo">
+            {% endblock %}
         </div>
-    </ul>
+        <div class="content">{% block content %}{% endblock %}</div>
+        <div class="menu-main">
+            <button class="ham filter-pink">
+                <img class="menuIcon" src="/static/images/icons/menu.png">
+                <img class="xIcon" src="/static/images/icons/close.png">
+            </button>
+            <ul class="menu">
+                <div class="menu-nav">
+                    <li><a class="nav-link" href="/">home</a></li>
+                    <li>
+                        <div class="nav-div"> discogs </div>
+                    </li>
+                    <div class="dropdown-content" id="release-links">
+                        <div class="links-container">
+                            <a href="/releases/unsleep">single <br> "бессонница"</a>
+                            <a href="/releases/traces">single <br> "тропы"</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-social">
+                    <ul class="social-links">
+                        <li class="social">
+                            <a target="_blank" href="https://vk.com/stanethuzhe">
+                                <img src="/static/images/vk.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank" href="https://stanethuzhe.bandcamp.com/">
+                                <img src="/static/images/bandcamp.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank" href="https://www.instagram.com/stanethuzhe/">
+                                <img src="/static/images/instagram.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank" href="https://www.youtube.com/channel/UCiFPrPKAUg391EqICZy8dxw">
+                                <img src="/static/images/youtube.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank" href="https://www.facebook.com/stanethuzhe">
+                                <img src="/static/images/facebook.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank"
+                                href="https://music.apple.com/ru/artist/%D1%81%D1%82%D0%B0%D0%BD%D0%B5%D1%82-%D1%85%D1%83%D0%B6%D0%B5/1489799830">
+                                <img src="/static/images/apple.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank" href="https://open.spotify.com/artist/6ICMu3DruvV9h4UbB6Kovn">
+                                <img src="/static/images/spotify.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                        <li class="social">
+                            <a target="_blank" href="https://music.yandex.ru/artist/8451417">
+                                <img src="/static/images/yandex.svg" alt="" class="filter-pink">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </ul>
+        </div>
+    </div>
     <script src="/static/scripts/mobile/base.js"></script>
 </body>
