--- a/shweb/templates/mobile/index.html
+++ b/shweb/templates/mobile/index.html
@@ -4,5 +4,5 @@
 <link rel='stylesheet' href="/static/css/mobile/home.css">
 {% endblock %}
 {% block content %}
-<!-- <img src="/static/images/collage.png" width="1800" height="500" class="main-page-photo"> -->
+<img src="/static/images/collage_mob.png" width="1800" height="500" class="main-page-photo">
 {% endblock %}
