--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="/static/images/bandlogo.png">
     <link rel='stylesheet' href="/static/css/style.css">
     {% endblock %}
+    {% block title %}
+    <title>станет хуже</title>
+    {% endblock %}
     {% block scripts %}{% endblock %}
 </head>
 
