--- a/shweb/templates/mobile/release.html
+++ b/shweb/templates/mobile/release.html
@@ -3,6 +3,9 @@
 {{ super() }}
 <link rel='stylesheet' href="/static/css/mobile/release.css">
 {% endblock %}
+{% block title %}
+<title>станет хуже - {{release_data['release-name']}}</title>
+{% endblock %}
 {% block content %}
 <div>
     <div style="max-width: 700px;">
