--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -5,6 +5,17 @@
 {% endblock %}
 {% block title %}
 <title>станет хуже - {{release_data['release-name']}}</title>
+<meta name="title" content="станет хуже - {{release_data['release-name']}}">
+<meta property="og:title" content="станет хуже - {{release_data['release-name']}}">
+<meta name="twitter:title" content="станет хуже - {{release_data['release-name']}}">
+<meta name="description" content="{{release_data['type']}}, {{release_data['date']}}">
+<meta property="og:description" content="{{release_data['type']}}, {{release_data['date']}}">
+<meta name="twitter:description" content="{{release_data['type']}}, {{release_data['date']}}">
+<meta name="image" content="http://www.stanethuzhe.ru/static/releases/{{release_data['release-id']}}/og.jpg">
+<meta property="og:image" content="http://www.stanethuzhe.ru/static/releases/{{release_data['release-id']}}/og.jpg">
+<meta name="twitter:image" content="http://www.stanethuzhe.ru/static/releases/{{release_data['release-id']}}/og.jpg">
+<meta name="url" content="http://www.stanethuzhe.ru/">
+<meta name="twitter:card" content="summary_large_image">
 {% endblock %}
 {% block content %}
 <div class="media-side">
