written to lyrics fix

--- a/shweb/templates/mobile/release.html
+++ b/shweb/templates/mobile/release.html
@@ -39,7 +39,7 @@
                 {{loop.index}}. {{ track.name }}
             </button>
             <div id={{ track.id }} class="lyrics">
-                <pre><b>Written By:</b> {{track.written}}</pre>
+                <pre><b>Lyrics:</b> {{track.written}}</pre>
                 <pre>{{track.lyrics}}</pre>
             </div>
         </div>
