--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -38,6 +38,7 @@
                     <div class="dropdown-content">
                         <a href="/releases/unsleep">single "бессонница"</a>
                         <a href="/releases/traces">single "тропы"</a>
+                        <a href="/releases/march">single "марш пустых знамён"</a>
                     </div>
                 </div>
             </div>
