--- a/shweb/templates/index.html
+++ b/shweb/templates/index.html
@@ -4,5 +4,5 @@
 <link rel='stylesheet' href="/static/css/home.css">
 {% endblock %}
 {% block content %}
-<img src="/static/images/collage.png" width="1800" height="500" class="main-page-photo">
+<img src="/static/images/collage.jpg" width="1800" height="500" class="main-page-photo">
 {% endblock %}
