add mobile march release

--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -48,6 +48,7 @@
                         <div class="links-container">
                             <a href="/releases/unsleep">single <br> "бессонница"</a>
                             <a href="/releases/traces">single <br> "тропы"</a>
+                            <a href="/releases/march">single "марш пустых знамён"</a>
                         </div>
                     </div>
                 </div>
