--- a/shweb/templates/mobile/release.html
+++ b/shweb/templates/mobile/release.html
@@ -22,7 +22,7 @@
     <div style="max-width: 700px;">
         <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%; padding-top: 120px;">
             <iframe
-                src="https://bandcamp.com/EmbeddedPlayer/{{release_data['bandcamp-id']}}/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/{{release_data['bandcamp-id']}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=false/transparent=true/"
                 style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;" allowfullscreen
                 scrolling="no" allow="encrypted-media"></iframe>
         </div>
@@ -51,10 +51,10 @@
         {% for service in release_data.services %}
         <li>
             <div class="service">
-                <a href="{{ service.link }}" class="service-link">
+                <a href="{{ service.link }}" class="service-link" target="_blank">
                     <img src="/static/images/services/{{ service.name }}.png">
                 </a>
-                <a href="{{ service.link }}" class="service-link">
+                <a href="{{ service.link }}" class="service-link" target="_blank">
                     <button class="service-btn">Play</button>
                 </a>
             </div>
