--- a/shweb/static/css/release.css
+++ b/shweb/static/css/release.css
@@ -7,7 +7,7 @@ pre {
 }
 
 .content {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -50,8 +50,8 @@ pre {
     width: 80px;
     max-width: 100%;
     cursor: pointer;
-    border: 1px solid rgba(124, 124, 124, 0.856);
-    background-color: rgba(0,0,0,0);
+    border: 1px solid rgba(255, 255, 255, 0.856);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 0px;
     text-align: center;
 }
