--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -40,7 +40,7 @@ body {
   min-height: 100%;
   display: grid;
   grid-template-rows: 1fr auto;
-  /* background-image:    url(../images/background.png); */
+  background-image:    url(../images/background.jpg);
   background-color: rgb(255, 255, 255);
   background-size:     cover;
   background-repeat:   no-repeat;
