--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     {% block head %}
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/static/images/bandlogo.png">
+    <link rel="shortcut icon" href="/static/images/favicon.png">
     <link rel='stylesheet' href="/static/css/style.css">
     {% endblock %}
     {% block title %}
