--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -5,7 +5,7 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="/static/images/bandlogo.png">
+    <link rel="shortcut icon" href="/static/images/favicon.png">
     <link rel='stylesheet' href="/static/css/mobile/style.css">
     {% endblock %}
     {% block title %}
@@ -34,7 +34,7 @@
         </div>
         <div class="content">{% block content %}{% endblock %}</div>
         <div class="menu-main">
-            <button class="ham filter-pink">
+            <button class="ham">
                 <img class="menuIcon" src="/static/images/icons/menu.png">
                 <img class="xIcon" src="/static/images/icons/close.png">
             </button>
@@ -56,43 +56,43 @@
                     <ul class="social-links">
                         <li class="social">
                             <a target="_blank" href="https://vk.com/stanethuzhe">
-                                <img src="/static/images/vk.svg" alt="" class="filter-pink">
+                                <img src="/static/images/vk.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://stanethuzhe.bandcamp.com/">
-                                <img src="/static/images/bandcamp.svg" alt="" class="filter-pink">
+                                <img src="/static/images/bandcamp.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://www.instagram.com/stanethuzhe/">
-                                <img src="/static/images/instagram.svg" alt="" class="filter-pink">
+                                <img src="/static/images/instagram.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://www.youtube.com/channel/UCiFPrPKAUg391EqICZy8dxw">
-                                <img src="/static/images/youtube.svg" alt="" class="filter-pink">
+                                <img src="/static/images/youtube.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://www.facebook.com/stanethuzhe">
-                                <img src="/static/images/facebook.svg" alt="" class="filter-pink">
+                                <img src="/static/images/facebook.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank"
                                 href="https://music.apple.com/ru/artist/%D1%81%D1%82%D0%B0%D0%BD%D0%B5%D1%82-%D1%85%D1%83%D0%B6%D0%B5/1489799830">
-                                <img src="/static/images/apple.svg" alt="" class="filter-pink">
+                                <img src="/static/images/apple.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://open.spotify.com/artist/6ICMu3DruvV9h4UbB6Kovn">
-                                <img src="/static/images/spotify.svg" alt="" class="filter-pink">
+                                <img src="/static/images/spotify.svg" alt="">
                             </a>
                         </li>
                         <li class="social">
                             <a target="_blank" href="https://music.yandex.ru/artist/8451417">
-                                <img src="/static/images/yandex.svg" alt="" class="filter-pink">
+                                <img src="/static/images/yandex.svg" alt="">
                             </a>
                         </li>
                     </ul>
