--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -79,6 +79,7 @@ body {
   /* background-color: rgba(0,0,0,0.8);
   color: white; */
   transform: scale(1.2);
+  transition: all 0.15s ease;
 }
 
 .nav-link {
