--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -5,11 +5,10 @@
 
 body {
     margin: 0;
-    background-image:    url(../../images/background.jpg);
-    background-color: rgba(0, 0, 0, 0);
+    background-image:    url(../../images/background.png);
+    background-color: rgb(253, 250, 250);
     background-size:     cover;
     background-repeat:   no-repeat;
-    height: 100vh;
     background-position: center center;
 }
 
