--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -8,7 +8,7 @@ body {
     background-image:    url(../../images/background.png);
     background-color: rgb(253, 250, 250);
     background-size:     cover;
-    background-repeat:   no-repeat;
+    background-repeat:   repeat-y;
     background-position: center center;
 }
 
