--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -43,7 +43,7 @@ body {
   background-image:    url(../images/background.png);
   background-color: rgb(255, 255, 255);
   background-size:     cover;
-  background-repeat:   no-repeat;
+  background-repeat:   repeat-y;
   background-position: center center;
 }
 
