mobile feed wip

--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -41,6 +41,7 @@
             <ul class="menu">
                 <div class="menu-nav">
                     <li><a class="nav-link" href="/">home</a></li>
+                    <li><a class="nav-link" href="/feed">feed</a></li>
                     <li>
                         <div class="nav-div"> discogs </div>
                     </li>
@@ -101,4 +102,6 @@
         </div>
     </div>
     <script src="/static/scripts/mobile/base.js"></script>
+    {% block loaded_scripts %}
+    {% endblock %}
 </body>
