--- a/shweb/static/css/mobile/feed.css
+++ b/shweb/static/css/mobile/feed.css
@@ -1,7 +1,9 @@
 .content {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 40px;
-    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+    align-items: flex-start;
+    width: 70%;
+    margin: 10px auto 0px auto;
 }
