--- a/shweb/templates/mobile/feed.html
+++ b/shweb/templates/mobile/feed.html
@@ -3,5 +3,22 @@
 {{ super() }}
 <link rel='stylesheet' href="/static/css/mobile/feed.css">
 {% endblock %}
+{% block scripts %}
+<script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
+{% endblock %}
 {% block content %}
+<div id="vk_groups"></div>
+{% endblock %}
+{% block loaded_scripts %}
+<script type="text/javascript">
+    var header_h = document.querySelector('.content').getBoundingClientRect().top;
+    var height = window.innerHeight - header_h;
+    VK.Widgets.Group("vk_groups", {
+        mode: 4,
+        width: window.innerWidth,
+        height: height,
+        wide: 1,
+        no_cover: 1,
+    }, 188825166);
+</script>
 {% endblock %}
