--- a/shweb/templates/mobile/release.html
+++ b/shweb/templates/mobile/release.html
@@ -20,7 +20,7 @@
 {% block content %}
 <div>
     <div style="max-width: 700px;">
-        <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%; padding-top: 120px;">
+        <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%;">
             <iframe
                 src="https://bandcamp.com/EmbeddedPlayer/{{release_data['bandcamp-id']}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=false/transparent=true/"
                 style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;" allowfullscreen
