bandlogo optimisation and link provided

--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -28,7 +28,9 @@
     <div class="wrapper">
         <div id="header" class="header">
             {% block header %}
-            <img src="/static/images/bandlogo.png" alt="" class="bandlogo">
+            <a href="/">
+                <img src="/static/images/bandlogo.png" alt="" class="bandlogo">
+            </a>
             {% endblock %}
             <div class="navbar">
                 <a href="/" class="nav-link">home</a>
