--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -29,7 +29,9 @@
     <div class="wrapper">
         <div id="header" class="header">
             {% block header %}
-            <img src="/static/images/bandlogo.png" alt="" class="bandlogo">
+            <a href="/">
+                <img src="/static/images/bandlogo.png" alt="" class="bandlogo">
+            </a>
             {% endblock %}
         </div>
         <div class="content">{% block content %}{% endblock %}</div>
