--- a/shweb/static/css/release.css
+++ b/shweb/static/css/release.css
@@ -172,3 +172,21 @@ pre {
     visibility: hidden;
     opacity: 0;
 }
+
+.auto-resizable-iframe {
+    margin: 20px auto;
+  }
+
+.auto-resizable-iframe > div {
+position: relative;
+padding-bottom: 56.25%;
+height: 0px;
+}
+
+.auto-resizable-iframe iframe {
+position: absolute;
+top: 0px;
+left: 0px;
+width: 100%;
+height: 100%;
+}
