--- a/shweb/templates/mobile/release.html
+++ b/shweb/templates/mobile/release.html
@@ -29,7 +29,13 @@
     </div>
 </div>
 <div class="release-info">
-    <div class="release-name"> {{release_data['release-name']}} </div>
+    <div class="release-name"> {{release_data['release-name']}} <span class="share">
+            <button class="share-btn">
+                <div class="share-text">share </div>
+                <img class="share-icon" src="/static/images/icons/share.png">
+            </button>
+        </span>
+    </div>
     <div class="date">Release date: {{release_data['date']}} </div>
     <div class="tracklist-head">Tracklist:</div>
     <ul class="tracklist">
@@ -64,10 +70,6 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
-<script>
-    function openLyrics(id) {
-        document.getElementById(id).classList.toggle("show");
-    }
-</script>
+{% block loaded_scripts %}
+<script src="/static/scripts/mobile/release.js"></script>
 {% endblock %}
