--- a/shweb/static/css/mobile/release.css
+++ b/shweb/static/css/mobile/release.css
@@ -119,3 +119,21 @@ pre {
     height: 24px;
     max-width: 100%;
 }
+
+.auto-resizable-iframe {
+    margin: 20px 0;
+}
+
+.auto-resizable-iframe > div {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0px;
+}
+
+.auto-resizable-iframe iframe {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
