--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -10,6 +10,7 @@ body {
     background-size:     cover;
     background-repeat:   repeat-y;
     background-position: center center;
+    background-attachment:fixed;
 }
 
 
