--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -29,6 +29,7 @@ body {
   background-size:     cover;
   background-repeat:   repeat-y;
   background-position: center center;
+  background-attachment:fixed;
 }
 
 /* HEADER */
