ios fix background fixed

--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <div id="background_wrap"></div>
     <div class="wrapper">
         <div id="header" class="header">
             {% block header %}
