--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -5,12 +5,26 @@
 
 body {
     margin: 0;
-    background-image:    url(../../images/background.png);
+    /* background-image:    url(../../images/background.png);
     background-color: rgb(253, 250, 250);
     background-size:     cover;
     background-repeat:   repeat-y;
     background-position: center center;
-    background-attachment:fixed;
+    background-attachment: initial; */
+}
+
+#background_wrap {
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url(../../images/background.png);
+    background-attachment: fixed;
+    background-size:     cover;
+    background-repeat:   repeat-y;
+    background-position: center center;
 }
 
 
