--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -21,7 +21,7 @@ body {
     height: 100%;
     width: 100%;
     background-image: url(../../images/background.png);
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-size:     cover;
     background-repeat:   repeat-y;
     background-position: center center;
