--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -5,8 +5,8 @@
 
 body {
     margin: 0;
+    background-color: rgba(189,189,186);
     /* background-image:    url(../../images/background.png);
-    background-color: rgb(253, 250, 250);
     background-size:     cover;
     background-repeat:   repeat-y;
     background-position: center center;
