--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -33,7 +33,7 @@
             </a>
             {% endblock %}
             <div class="navbar">
-                <a href="/{{session['lang_arg']}}" class="nav-link">home</a>
+                <a href="/{{session['lang_arg']}}" class="nav-link">{{_('home')}}</a>
                 <a href="/feed{{session['lang_arg']}}" class="nav-link">feed</a>
                 <div class="dropdown">
                     <button class="dropbtn">discogs</button>
