--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -97,7 +97,24 @@ body {
 
             .dropdown-content {
                 width: 80%;
-                /* display: none; */
+                display: none;
+            }
+
+            .expand {
+                display: inline-block;
+                vertical-align:middle;
+            }
+
+            .expand-icon {
+                height: 4vh;
+                max-width: 100%;
+                transform: rotate(0deg);
+                transition: transform 0.2s linear;
+            }
+
+            .expand-more {
+                transform: rotate(-180deg);
+                transition: transform 0.2s linear;
             }
 
             .nav-link {
@@ -111,6 +128,8 @@ body {
                 display: flex;
                 flex-direction: column;
             }
+
+            .show {display: block;}
 
             .links-container a {
                 padding-left: 25%;
@@ -171,4 +190,20 @@ body {
 
             .show {
                 display: block;
+            }
+
+            .language-switch {
+                display: flex;
+
+                padding: 0;
+                padding-left: 10%;
+                font-size: 4vh;
+            }
+
+            .language-button {
+                text-decoration: underline;
+            }
+
+            .language-switch .slash {
+                pointer-events: none;
             }
